Modificado el readme para que diga cosas útiles.

--- a/readme.html
+++ b/readme.html
@@ -3,16 +3,16 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>LayoutIt! - Bootstrap 4</title>
+	<title>Recetillas</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
-	<meta name="author" content="LayoutIt!">
+	<meta name="author" content="María de las Maravillas y Andrea">
 </head>
 
 <body>
-	<script type="text/javascript">
-		window.location.href = 'https://www.layoutit.com';
-    </script>
+	<p> Esta página ha sido creada por Andrea Domínguez Escobar y María de las Maravillas Luque Carmona como parte de un proyecto de Sistemas de la Información Basados en Web, en el curso 2021/2022.</p>
+	<br>
+	<p><3</p>
 </body>
 
 </html>
