--- a/src/index.html
+++ b/src/index.html
@@ -226,7 +226,10 @@
 		</div>
 	</div>
 </div>
-
+<div id="closepage" role="contentinfo">
+	<p>&copy; 2022 Recetillas - Todos los derechos reservados <a href="src/terminos-de-uso/">Términos de uso</a> · <a href="src/politica-de-privacidad/">Política de privacidad</a> · <a href="src/politica-de-cookies/">Política de cookies</a> <br /></p>
+	
+</div>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
