Arreglado fallo enlaces pie de página

--- a/src/index.html
+++ b/src/index.html
@@ -359,7 +359,7 @@
         </div>
     </div>
     <div id="closepage" role="contentinfo">
-        <p> <center> &hearts; &copy; 2022 Recetillas - Todos los derechos reservados <a href="src/terminos-de-uso/">Términos de uso</a> · <a href="src/politica-de-privacidad/">Política de privacidad</a> · <a href="src/politica-de-cookies/">Política de cookies</a> &hearts; </center> <br /></p>
+        <p> <center> &hearts; &copy; 2022 Recetillas - Todos los derechos reservados 😇 <a href="terminos-de-uso.html">Términos de uso</a> · <a href="politica-de-privacidad.html">Política de privacidad</a> · <a href="politica-de-cookies.html">Política de cookies</a> &hearts; </center> <br /></p>
 
     </div>
     <script src="js/jquery.min.js"></script>
