--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link href="css/style.css" rel="stylesheet">
-    
+
 </head>
 
 <body>
@@ -61,10 +61,10 @@
                         <div class="col-md-6" style="display: flex;justify-content: center;align-items: center;">
                             <ul class="nav nav-pills">
                                 <li class="nav-item dropdown ml-md-auto">
-                                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Home</a>
+                                    <a class="btn btn-danger mx-1" href="#">Home</a>
                                 </li>
                                 <li class="nav-item dropdown ml-md-auto">
-                                    <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown">Recetas</a>
+                                    <a class="btn btn-danger dropdown-toggle mx-1" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown">Recetas</a>
                                     <div class="dropdown-menu dropdown-menu-right" id="menuRecetas" onclick="cambio()">
                                         <div class="row">
                                             <ul class="col-md-4 justify-content-start" id="primeraParte">
@@ -164,7 +164,7 @@
                                     </div>
                                 </li>
                                 <li class="nav-item dropdown ml-md-auto">
-                                    <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown">Recetas por países</a>
+                                    <a class="btn btn-danger dropdown-toggle mx-1" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown">Recetas por países</a>
                                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                                         <a class="dropdown-item" href="#">
                                                 México
@@ -179,7 +179,7 @@
                                     </div>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="#">Nosotros</a>
+                                    <a class="btn btn-danger mx-1" href="#">Nosotros</a>
                                 </li>
                             </ul>
                         </div>
@@ -191,6 +191,7 @@
 					</button>
 				</div>-->
                 </div>
+                <div class="dropdown-divider"></div>
                 <div class="row">
                     <div class="col-md-12">
                         <div class="carousel slide" id="carousel-705720">
