--- a/src/index.html
+++ b/src/index.html
@@ -26,11 +26,12 @@
             <div class="col-md-12">
                 <div class="row">
                     <div class="col-md-4">
-                        <img alt="Logo Recetillas.com" src="img/logo.png" class="rounded-circle" width="150px" height="150px">
+                        <a href="index.html"> <img alt="Logo Recetillas.com" src="img/logo.png" class="rounded-circle" width="150px" height="150px">
+                        </a>
                     </div>
                     <div class="col-md-4 justify-content-end" style="display: flex;justify-content: center;align-items: center;">
                         <div class="input-group">
-                            <input type="text" id="txtFiltro" class="form-control" placeholder="Buscar Categoria..." autocomplete="off" />
+                            <input type="text" id="txtFiltro" class="form-control" placeholder="Buscar Categoría..." autocomplete="off" />
                             <button class="btn btn-outline-light" type="button">
 							<i class="bi bi-search"></i>
 						</button>
@@ -360,7 +361,9 @@
         </div>
     </div>
     <div id="closepage" role="contentinfo">
-        <p> <center> &hearts; &copy; 2022 Recetillas - Todos los derechos reservados 😇 <a href="terminos-de-uso.html">Términos de uso</a> · <a href="politica-de-privacidad.html">Política de privacidad</a> ·
+        <p> <center> &hearts; &copy; 2022 Recetillas - Todos los derechos reservados 😇 · <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
+    Política de Privacidad
+    </button>
     <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
     Política de Cookies
     </button> &hearts; </center> <br /></p>
@@ -387,7 +390,7 @@
         <table>
         <tr>
             <th>
-                Política de cookies de Recetillas.com
+                Política de Cookies de Recetillas.com
             </th>
         </tr>
         <tr>
@@ -410,7 +413,47 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Aceptar Cookies</button>
+        <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Aceptar Cookies</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true" >
+  <div class="modal-dialog" style="max-width: 1000px;">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">Política de Privacidad</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <table>
+        <tr>
+            <th>
+                Política de Privacidad de Recetillas.com
+            </th>
+        </tr>
+        <tr>
+            <td>
+                <p> ¡Bienvenido a Recetillas! </p>
+                <p> Clases de Datos recogidos </p>
+<p> Entre las clases de Datos Personales que recoge esta Página Web, ya sea directamente o a través de terceros, se encuentran: dirección de correo electrónico; nombre; página web; Datos de uso; Cookies.
+La información completa referente a cada categoría de Datos Personales que se recogen se proporciona en las secciones de la presente política de privacidad dedicadas a tal fin o mediante textos explicativos específicos que se muestran antes de la recogida de dichos Datos. </p>
+<p> Los Datos Personales podrán ser proporcionados libremente por el Usuario o, en caso de los Datos de Uso, serán recogidos automáticamente cuando se utilice esta Página Web. </p>
+<p> Todos los Datos solicitados por esta Página Web son obligatorios y la negativa a proporcionarlos podrá imposibilitar que esta Página Web pueda proceder a la prestación del servicio. En los casos en los que esta Página Web indique específicamente que ciertos Datos no son obligatorios, los Usuarios serán libres de no comunicar tales Datos sin que esto tenga consecuencia alguna sobre la disponibilidad o el funcionamiento del Servicio. Los Usuarios que tengan dudas sobre qué Datos son obligatorios pueden contactar con el Titular. </p>
+<p> El uso de Cookies - o de otras herramientas de seguimiento - por parte de esta Página Web o por los titulares de servicios de terceros utilizados por esta Página Web tiene como finalidad la prestación del Servicio solicitado por el Usuario, además de cualesquiera otras finalidades que se describan en el presente documento y en la Política de Cookies, en caso de estar disponible.
+El Usuario asume la responsabilidad respecto de los Datos Personales de terceros que se obtengan, publiquen o compartan a través de esta Página Web y declara por la presente que tiene el consentimiento de dichos terceros para proporcionar dichos Datos al Titular. </p>
+
+                
+            </td>
+        </tr>
+    </table>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+        <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Aceptar</button>
       </div>
     </div>
   </div>
