--- a/src/index.html
+++ b/src/index.html
@@ -358,6 +358,7 @@
             </div>
         </div>
     </div>
+    <div class="dropdown-divider"></div>
     <div id="closepage" role="contentinfo">
         <p>
         	<center>
