--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
                         <div class="col-md-6" style="display: flex;justify-content: center;align-items: center;">
                             <ul class="nav nav-pills">
                                 <li class="nav-item dropdown ml-md-auto">
-                                    <a class="btn btn-danger mx-1" href="#">Home</a>
+                                    <a class="btn btn-danger mx-1" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item dropdown ml-md-auto">
                                     <a class="btn btn-danger dropdown-toggle mx-1" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown">Recetas</a>
@@ -241,17 +241,13 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-                                <h3>
-
 <!--CODIGO DE LAS RECETAS DE LA PÁGINA DEL HOME-->
-
-                                   Recetas Mexicanas
-                                </h3>
+                                <h3> Recetas Mexicanas</h3>
                                 <div class="row">
                                     <div class="col-md-4">
                                         <div class="card">
                                         	<!--CAMBIAR LA URL POR LA PÁGINA DE LA RECETA-->
-                                            <a href="https://www.google.es/">
+                                            <a href="recetaPozole.html">
                                             	<img class="card-img-top" href="https://www.google.es/" alt="Bootstrap Thumbnail First" src="img/pozole.png">
                                             </a>
                                             
@@ -266,7 +262,7 @@
                                     <div class="col-md-4">
                                         <div class="card">
                                         	<!--CAMBIAR LA URL POR LA PÁGINA DE LA RECETA-->
-                                        	<a href="https://www.google.es/">
+                                        	<a href="recetaGuacamole.html">
                                             	<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="img/guacamole.jpg">
                                             </a>
                                             <div class="card-block">
@@ -280,7 +276,7 @@
                                     <div class="col-md-4">
                                         <div class="card">
                                         	<!--CAMBIAR LA URL POR LA PÁGINA DE LA RECETA-->
-                                        	<a href="https://www.google.es/">
+                                        	<a href="recetaChilaquiles.html">
                                             	<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="img/chilaquiles.jpg">
                                             </a>
                                             <div class="card-block">
@@ -319,7 +315,7 @@
                                             <div class="col-md-4">
                                                 <div class="card">
                                                 	<!--CAMBIAR LA URL POR LA PÁGINA DE LA RECETA-->
-                                                	<a href="https://www.google.es/">
+                                                	<a href="paginabase.html">
                                                     	<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="img/Salmorejo.png">
                                                     </a>
                                                     <div class="card-block">
