--- a/src/index.html
+++ b/src/index.html
@@ -43,13 +43,13 @@
                         
                         <div>
                             <button class="btn btn-outline-light" type="button">
-						<a href="https://www.facebook.com" class="bi bi-facebook" ></a>	
+						<a href="https://www.facebook.com/Recetillascom-115779651122655" class="bi bi-facebook" ></a>	
 						
 						</button>
                         </div>
                         <div>
                             <button class="btn btn-outline-light" type="button">
-						<a href="https://www.instagram.com" class="bi bi-instagram" ></a>	
+						<a href="https://www.instagram.com/recetillasmxesp/" class="bi bi-instagram" ></a>	
 
 						</button>
                         </div>
@@ -211,7 +211,7 @@
                             </ol>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img class="d-block w-100" alt="Carousel Bootstrap First" src="img/TACOS AL PASTOR.png">
+                                    <img class="d-block w-100" alt="Carousel Bootstrap First" href="recetaTacos.html" src="img/TACOS AL PASTOR.png">
                                     <div class="carousel-caption">
                                     	<p style="color: #000000">
                                     		Los tacos al pastor o de trompo son la variedad de tacos más populares en la mayor parte de México. Sus ingredientes principales son carne adobada, asada, servida en finas rebandas sobre pequeñas tortillas de maíz, la carne puede ser una combinación de carne de cerdo y carne de ternera, aunque lo más común es que sea solo carne de puerco.
@@ -229,7 +229,7 @@
                                     </div>
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" alt="Carousel Bootstrap Third" src="img/Tamales.png">
+                                    <img class="d-block w-100" alt="Carousel Bootstrap Third" href="recetaTamales.html" src="img/Tamales.png">
                                     <div class="carousel-caption">
                                         <p style="color: #000000">
                                             El tamal es un alimento preparado generalmente a base de masa de maíz o de arroz rellena de carnes, vegetales, salsas y otros ingredientes.​ Son envueltas en hojas de vegetales como de mazorca de maíz o de plátano, bijao, maguey, aguacate, canak, entre otras, es cocida en agua o al vapor.​ Pueden tener un sabor dulce o salado. Existen una gran variedad de sabores en los tamales.
