--- a/src/index.html
+++ b/src/index.html
@@ -211,7 +211,7 @@
                             </ol>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img class="d-block w-100" alt="Carousel Bootstrap First" href="recetaTacos.html" src="img/TACOS AL PASTOR.png">
+                                    <img class="d-block w-100" alt="Carousel Bootstrap First" src="img/TACOS AL PASTOR.png">
                                     <div class="carousel-caption">
                                     	<p style="color: #000000">
                                     		Los tacos al pastor o de trompo son la variedad de tacos más populares en la mayor parte de México. Sus ingredientes principales son carne adobada, asada, servida en finas rebandas sobre pequeñas tortillas de maíz, la carne puede ser una combinación de carne de cerdo y carne de ternera, aunque lo más común es que sea solo carne de puerco.
