Terminadas recetas españolas

--- a/src/index.html
+++ b/src/index.html
@@ -211,7 +211,8 @@
                             </ol>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img class="d-block w-100" alt="Carousel Bootstrap First" src="img/TACOS AL PASTOR.png">
+                                    <a href="recetaTacos.html"> <img class="d-block w-100" alt="Carousel Bootstrap First" src="img/TACOS AL PASTOR.png">
+                                    </a>
                                     <div class="carousel-caption">
                                     	<p style="color: #000000">
                                     		Los tacos al pastor o de trompo son la variedad de tacos más populares en la mayor parte de México. Sus ingredientes principales son carne adobada, asada, servida en finas rebandas sobre pequeñas tortillas de maíz, la carne puede ser una combinación de carne de cerdo y carne de ternera, aunque lo más común es que sea solo carne de puerco.
@@ -220,7 +221,8 @@
                                     </div>
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" alt="Carousel Bootstrap Second" src="img/Paella.png">
+                                    <a href="recetaPaella.html"> <img class="d-block w-100" alt="Carousel Bootstrap Second" src="img/Paella.png">
+                                    </a>
                                     <div class="carousel-caption">                                    	
                                     	<p style="color: #000000">
                                             La paella es una receta de cocina con base de arroz, con origen en la actual Comunidad Valenciana, el arroz se cocina junto a otros alimentos en una sartén. El nombre de paella hace referencia tanto a la receta o plato cocinado como al recipiente que se utiliza para su elaboración.
@@ -229,7 +231,8 @@
                                     </div>
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" alt="Carousel Bootstrap Third" href="recetaTamales.html" src="img/Tamales.png">
+                                    <a href="recetaTamales.html"> <img class="d-block w-100" alt="Carousel Bootstrap Third" href="recetaTamales.html" src="img/Tamales.png">
+                                    </a>
                                     <div class="carousel-caption">
                                         <p style="color: #000000">
                                             El tamal es un alimento preparado generalmente a base de masa de maíz o de arroz rellena de carnes, vegetales, salsas y otros ingredientes.​ Son envueltas en hojas de vegetales como de mazorca de maíz o de plátano, bijao, maguey, aguacate, canak, entre otras, es cocida en agua o al vapor.​ Pueden tener un sabor dulce o salado. Existen una gran variedad de sabores en los tamales.
@@ -299,7 +302,7 @@
                                             <div class="col-md-4">
                                                 <div class="card">
                                                 	<!--CAMBIAR LA URL POR LA PÁGINA DE LA RECETA-->
-                                                	<a href="https://www.google.es/">
+                                                	<a href="recetaTortilla.html">
                                                     	<img class="card-img-top" alt="Bootstrap Thumbnail First" src="img/TortillaDePapas.png">
                                                     </a>
                                                     <div class="card-block">
@@ -315,7 +318,7 @@
                                             <div class="col-md-4">
                                                 <div class="card">
                                                 	<!--CAMBIAR LA URL POR LA PÁGINA DE LA RECETA-->
-                                                	<a href="paginabase.html">
+                                                	<a href="recetaSalmorejo.html">
                                                     	<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="img/Salmorejo.png">
                                                     </a>
                                                     <div class="card-block">
@@ -331,7 +334,7 @@
                                             <div class="col-md-4">
                                                 <div class="card">
                                                 	<!--CAMBIAR LA URL POR LA PÁGINA DE LA RECETA-->
-                                                	<a href="https://www.google.es/">
+                                                	<a href="recetaHuevosRotos.html">
                                                     	<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="img/huevos-rotos.png">
                                                     </a>
                                                     <div class="card-block">
