--- a/src/recetaChilaquiles.html
+++ b/src/recetaChilaquiles.html
@@ -268,7 +268,9 @@
                     </div>
                 </div>
                 <div id="elaboracion">
-                	<h4>Elaboración de la receta</h4>
+                	<list>
+                        <ul>
+                            <h4>Elaboración de la receta</h4>
 
                     <h5>Para la elaboración de la salsa:</h5>
                 	<li>Hierve los jitomates en agua durante 3 minutos. Añade los chiles guajillo y déjalos hervir por 2 minutos más, retira del fuego los ingredientes y déjalos reposar hasta que se enfríen.</li>
@@ -281,6 +283,7 @@
                 	<li>Distribuye en platos los totopos y báñalos con la salsa caliente</li>
                 	<li>Agrégales crema, queso y cebolla. Pon en cada plato un huevo frito o pollo deshebrado, sobre los chilaquiles y si lo deseas acompáñalos con frijoles</li>
                 	<li>¡DISFRUTAMOS!</li>
+                </ul>
                 </div>
 
 <!--RECOMENDACIONES-->
