--- a/src/recetaGuacamole.html
+++ b/src/recetaGuacamole.html
@@ -257,7 +257,9 @@
                     </div>
                 </div>
                 <div id="elaboracion">
-                    <h4>Elaboración de la receta</h4>
+                    <list>
+                        <ul>
+                            <h4>Elaboración de la receta</h4>
                     <li>Partimos los aguacates por la mitad, retiramos el hueso, y con la ayuda de una cuchara sopera vaciamos las dos mitades del aguacate.</li>
                     <li>Ponemos los aguacates en un plato y con un tenedor los aplastamos.</li>
                     <li>Cortamos la cebolla, tomate, chile y cilantro en trocitos pequeños. Del cilantro tiene que ser aproximadamente ½ cucharadita una vez este picado.</li>
@@ -266,6 +268,7 @@
                     <li>Mezclamos todo bien, probamos y si le falta un poquito más de sal o pimienta, sazonamos al gusto.</li>
                     <li>Podemos acompañarlo con totopos</li>
                     <li>¡DISFRUTAMOS!</li>
+                </ul>
                 </div>
 
 <!--RECOMENDACIONES-->
