--- a/src/recetaTamales.html
+++ b/src/recetaTamales.html
@@ -269,7 +269,9 @@
                     </div>
                 </div>
                 <div id="elaboracion">
-                    <h4>Elaboración de la receta</h4>
+                    <list>
+                        <ul>
+                            <h4>Elaboración de la receta</h4>
                     <li>Tomamos los chiles y los agregamos a una cacerola con agua hirviendo, dejamos que se cuezan por 5 min. y entonces agregamos los tomates rojos a la misma cacerola para que se cuezan juntos. Al momento que veamos que a los tomates rojos se les desprenda la piel los retiramos del fuego y les drenamos el agua.</li> 
                     <li>Agregamos a la licuadora los tomates y chiles, junto con el ajo, la mitad del caldo de pollo y una pizca de sal, entonces procedemos a licuar para obtener una salsa homogénea y la reservamos un momento.</li>
                     <li>Ahora tomamos la cebolla, la rebanamos y la colocamos en un sartén con aceite previamente calentado y dejamos que se sofría por un momento. Una vez lista la cebolla tomamos las salsa que reservamos hace un momento y se la agregamos para que se sazone. Movemos constantemente por aproximadamente 10 minutos.</li>
@@ -282,6 +284,7 @@
                     <li>Por otro lado, tomamos una vaporera le colocamos un poco de agua en el fondo colocamos una rejilla de aluminio y la cubrimos con trozos de las hojas de maíz.</li>
                     <li>Una vez hirviendo el agua comenzamos a colocar los tamales sobre la rejilla cubierta con las trozos de hoja de maiz y colocamos un pedazo de plástico tapando los tamales y por ultimo cerramos con la tapa, y los cocinamos durante una hora aproximadamente.</li>
                     <li>Pasado este tiempo y asegurándote que los tamales están bien cocidos.¡DISFRUTAMOS!</li>
+                </ul>
                 </div>
 
 <!--RECOMENDACIONES-->
