--- a/src/recetaTortilla.html
+++ b/src/recetaTortilla.html
@@ -106,7 +106,7 @@
                                 </li>
                                 <li class="nav-item dropdown ml-md-auto">
                                     <a class="btn btn-danger dropdown-toggle mx-1" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown">Recetas</a>
-                                    <div class="dropdown-menu dropdown-menu-right" id="menuRecetas" onclick="cambio()">
+                                    <div class="dropdown-menu dropdown-menu-right" id="menuRecetas">
                                         <div class="row">
                                             <ul class="col-md-4 justify-content-start" id="primeraParte">
                                                 <a class="textoEstilos dropdown-item">
@@ -140,13 +140,13 @@
                                                 <div class="dropdown-divider"></div>
                                             </ul>
                                             <ul class="col-md-4 justify-content-center">
-                                                <a class="dropdown-item" href="#">
+                                                <a class="dropdown-item" href="paginaMexico.html">
                                                 México
                                                 <img class="imagenEstilos" height="23px" width="23px" src="img/mexico.png"/>
                                                 </a>
 
                                                 <div class="dropdown-divider"></div>
-                                                <a class="dropdown-item" href="#">
+                                                <a class="dropdown-item" href="paginaEspaña.html">
                                                 España
                                                 <img class="imagenEstilos" height="23px" width="23px" src="img/españa.png"/>
                                                 </a>
@@ -207,20 +207,20 @@
                                 <li class="nav-item dropdown ml-md-auto">
                                     <a class="btn btn-danger dropdown-toggle mx-1" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown">Recetas por países</a>
                                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                                        <a class="dropdown-item" href="#">
+                                        <a class="dropdown-item" href="paginaMexico.html">
                                                 México
                                                 <img class="imagenEstilos" height="23px" width="23px" src="img/mexico.png"/>
                                                 </a>
 
                                                 <div class="dropdown-divider"></div>
-                                                <a class="dropdown-item" href="#">
+                                                <a class="dropdown-item" href="paginaEspaña.html">
                                                 España
                                                 <img class="imagenEstilos" height="23px" width="23px" src="img/españa.png"/>
                                                 </a>
                                     </div>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="btn btn-danger mx-1" href="#">Nosotros</a>
+                                    <a class="btn btn-danger mx-1" href="Nosotros.html">Nosotros</a>
                                 </li>
                             </ul>
                         </div>
@@ -290,7 +290,7 @@
                     <div class="col-md-4">
                                         
                     <div class="card">
-                    <!--CAMBIAR LA URL POR LA PÁGINA DE LA RECETA-->
+        
                         <a href="recetaPaella.html">
                             <img class="card-img-top" alt="Bootstrap Thumbnail Second" src="img/paellafoto.jpg">
                                             </a>
