--- a/src/paginabase.html
+++ b/src/paginabase.html
@@ -98,124 +98,112 @@
                 <div class="row">
                     <center>
                         <div class="col-md-6" style="display: flex;justify-content: center;align-items: center;">
-                            <ul class="nav nav-pills">
-                                <li class="nav-item dropdown ml-md-auto">
-                                    <a class="btn btn-danger mx-1" href="#">Home</a>
-                                </li>
+                            <ul class="nav nav-pills">                               
                                 <li class="nav-item dropdown ml-md-auto">
                                     <a class="btn btn-danger dropdown-toggle mx-1" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown">Recetas</a>
                                     <div class="dropdown-menu dropdown-menu-right" id="menuRecetas">
                                         <div class="row">
                                             <ul class="col-md-4 justify-content-start" id="primeraParte">
                                                 <a class="textoEstilos dropdown-item">
-													Arroz
-													<img class="imagenEstilos" height="23px" width="23px" src="img/arroz.png"/>
-												</a>
+                                                    Arroz
+                                                    <img class="imagenEstilos" height="23px" width="23px" src="img/arroz.png"/>
+                                                </a>
 
                                                 <div class="dropdown-divider"></div>
                                                 <a class="dropdown-item" href="#">
-													Pasta
-													<img class="imagenEstilos" height="23px" width="23px" src="img/espaguetis.png"/>
-												</a>
+                                                    Pasta
+                                                    <img class="imagenEstilos" height="23px" width="23px" src="img/espaguetis.png"/>
+                                                </a>
 
                                                 <div class="dropdown-divider"></div>
                                                 <a class="dropdown-item" href="#">
-													Carne
-													<img class="imagenEstilos" height="23px" width="23px" src="img/carne.png"/>
-												</a>
+                                                    Carne
+                                                    <img class="imagenEstilos" height="23px" width="23px" src="img/carne.png"/>
+                                                </a>
 
                                                 <div class="dropdown-divider"></div>
                                                 <a class="dropdown-item" href="#">
                                                 Pollo
-                                            	<img class="imagenEstilos" height="23px" width="23px" src="img/pollo.png"/>
-                                            	</a>
+                                                <img class="imagenEstilos" height="23px" width="23px" src="img/pollo.png"/>
+                                                </a>
 
                                                 <div class="dropdown-divider"></div>
                                                 <a class="dropdown-item" href="#">
                                                 Embutido
-												<img class="imagenEstilos" height="23px" width="23px" src="img/embutido.png"/>
-                                            	</a>
+                                                <img class="imagenEstilos" height="23px" width="23px" src="img/embutido.png"/>
+                                                </a>
                                                 <div class="dropdown-divider"></div>
                                             </ul>
                                             <ul class="col-md-4 justify-content-center">
                                                 <a class="dropdown-item" href="paginaMexico.html">
                                                 México
                                                 <img class="imagenEstilos" height="23px" width="23px" src="img/mexico.png"/>
-                                            	</a>
+                                                </a>
 
                                                 <div class="dropdown-divider"></div>
                                                 <a class="dropdown-item" href="paginaEspaña.html">
                                                 España
                                                 <img class="imagenEstilos" height="23px" width="23px" src="img/españa.png"/>
-                                            	</a>
+                                                </a>
 
                                                 <div class="dropdown-divider"></div>
                                                 <a class="dropdown-item" href="#">
                                                 Pescados Y Mariscos
                                                 <img class="imagenEstilos" height="23px" width="23px" src="img/pescado.png"/>
-                                            	</a>
+                                                </a>
 
                                                 <div class="dropdown-divider"></div>
                                                 <a class="dropdown-item" href="#">
                                                 Maíz
                                                 <img class="imagenEstilos" height="23px" width="23px" src="img/maiz.png"/>
-                                            	</a>
+                                                </a>
 
                                                 <div class="dropdown-divider"></div>
                                                 <a class="dropdown-item" href="#">
                                                 Eventos especiales
                                                 <img class="imagenEstilos" height="23px" width="23px" src="img/copas.png"/>
-                                            	</a>
+                                                </a>
                                                 <div class="dropdown-divider"></div>
                                             </ul>
                                             <ul class="col-md-4 justify-content-end">
                                                 <a class="dropdown-item" href="#">
                                                 Bebidas
                                                 <img class="imagenEstilos" height="23px" width="23px" src="img/bebida.png"/>
-                                            	</a>
+                                                </a>
 
                                                 <div class="dropdown-divider"></div>
                                                 <a class="dropdown-item" href="#">
                                                 Postres
                                                 <img class="imagenEstilos" height="23px" width="23px" src="img/postre.png"/>
-                                            	</a>
+                                                </a>
 
                                                 <div class="dropdown-divider"></div>
                                                 <a class="dropdown-item" href="#">
                                                 Puntaje
                                                 <img class="imagenEstilos" height="23px" width="23px" src="img/puntaje.png"/>
-                                            	</a>
+                                                </a>
 
                                                 <div class="dropdown-divider"></div>
                                                 <a class="dropdown-item" href="#">
                                                 Sopas
                                                 <img class="imagenEstilos" height="23px" width="23px" src="img/sopa.png"/>
-                                            	</a>
+                                                </a>
 
                                                 <div class="dropdown-divider"></div>
                                                 <a class="dropdown-item" href="#">
                                                 Entradas
                                                 <img class="imagenEstilos" height="23px" width="23px" src="img/entrada.png"/>
-                                            	</a>
+                                                </a>
                                                 <div class="dropdown-divider"></div>
                                             </ul>
                                         </div>
                                     </div>
                                 </li>
-                                <li class="nav-item dropdown ml-md-auto">
-                                    <a class="btn btn-danger dropdown-toggle mx-1" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown">Recetas por países</a>
-                                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                                        <a class="dropdown-item" href="paginaMexico.html">
-                                                México
-                                                <img class="imagenEstilos" height="23px" width="23px" src="img/mexico.png"/>
-                                            	</a>
-
-                                                <div class="dropdown-divider"></div>
-                                                <a class="dropdown-item" href="paginaEspaña.html">
-                                                España
-                                                <img class="imagenEstilos" height="23px" width="23px" src="img/españa.png"/>
-                                            	</a>
-                                    </div>
+                                <li class="nav-item">
+                                    <a class="btn btn-danger mx-1" href="paginaEspaña.html">Recetas España</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="btn btn-danger mx-1" href="paginaMexico.html">Recetas México</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="btn btn-danger mx-1" href="Nosotros.html">Nosotros</a>
