--- a/src/recetaHuevosRotos.html
+++ b/src/recetaHuevosRotos.html
@@ -99,11 +99,8 @@
                 <!--MENÚ-->
                 <div class="row">
                     <center>
-                        <div class="col-md-6" style="display: flex;justify-content: center;align-items: center;">
-                            <ul class="nav nav-pills">
-                                <li class="nav-item dropdown ml-md-auto">
-                                    <a class="btn btn-danger mx-1" href="index.html">Home</a>
-                                </li>
+                       <div class="col-md-6" style="display: flex;justify-content: center;align-items: center;">
+                            <ul class="nav nav-pills">                               
                                 <li class="nav-item dropdown ml-md-auto">
                                     <a class="btn btn-danger dropdown-toggle mx-1" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown">Recetas</a>
                                     <div class="dropdown-menu dropdown-menu-right" id="menuRecetas">
@@ -204,20 +201,11 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li class="nav-item dropdown ml-md-auto">
-                                    <a class="btn btn-danger dropdown-toggle mx-1" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown">Recetas por países</a>
-                                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                                        <a class="dropdown-item" href="paginaMexico.html">
-                                                México
-                                                <img class="imagenEstilos" height="23px" width="23px" src="img/mexico.png"/>
-                                                </a>
-
-                                                <div class="dropdown-divider"></div>
-                                                <a class="dropdown-item" href="paginaEspaña.html">
-                                                España
-                                                <img class="imagenEstilos" height="23px" width="23px" src="img/españa.png"/>
-                                                </a>
-                                    </div>
+                                <li class="nav-item">
+                                    <a class="btn btn-danger mx-1" href="paginaEspaña.html">Recetas España</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="btn btn-danger mx-1" href="paginaMexico.html">Recetas México</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="btn btn-danger mx-1" href="Nosotros.html">Nosotros</a>
